<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.sendbird.calls.quickstart.main.ApplicationInformationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#ffffff"
        android:elevation="3dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/MyToolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_app_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColorHint="#61000000"
            app:hintTextColor="#61000000"
            app:boxBackgroundColor="#f0f0f0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_app_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/calls_app_id"
                android:imeOptions="actionDone"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColorHint="#61000000"
            app:hintTextColor="#61000000"
            app:boxBackgroundColor="#f0f0f0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/calls_user_id"
                android:imeOptions="actionDone"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_access_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColorHint="#61000000"
            app:hintTextColor="#61000000"
            app:boxBackgroundColor="#f0f0f0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_access_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/calls_access_token"
                android:imeOptions="actionDone"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_sign_in"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:background="@drawable/selector_sign_in_relative_layout_bg">

            <TextView
                android:id="@+id/text_view_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@drawable/selector_sign_in_text_view_text"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="2sp"
                android:text="@string/calls_sign_in"
                android:duplicateParentState="true" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>